--- a/TechnicalTechX/Style/style.css
+++ b/TechnicalTechX/Style/style.css
@@ -42,8 +42,11 @@ nav {
     grid-template-columns: 4rem 13rem 5rem 6rem 3rem 5rem 6rem 6rem 6rem;
     align-items: center;
     grid-gap: 1rem;
+    position: absolute;
+    top: 1.4rem;
+    z-index: 12;
+    transition: 0.5s;
     overflow: hidden;
-    position: relative;
 }
 
 #IMGProfile {
@@ -331,6 +334,7 @@ nav {
     padding-left: 0.5rem;
 }
 
+
 footer {
     background-color: #222;
     width: 100%;
@@ -479,6 +483,14 @@ footer {
     .QuickBTNs {
         display: none;
     }
+    #Home2::after {
+        position: absolute;
+        bottom: 0;
+        content: "";
+        background-color: #777;
+        height: 2px;
+        width: 100%;
+    }
     #BTNForHiddenEle {
         width: 1.5rem;
         height: 1.5rem;
@@ -488,6 +500,34 @@ footer {
         flex-direction: column;
         position: absolute;
         right: 1rem;
+    }
+    .QuickBTNs2 {
+        color: #999;
+        font: caption;
+        font-variant: small-caps;
+        font-weight: 500;
+        font-size: 1rem;
+        height: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s;
+        cursor: pointer;
+        position: relative;
+        transition: 0.5s;
+    }
+    
+    .QuickBTNs2:hover {
+        background-color: rgba(255, 0, 0, 0.219);
+    }
+    #HiddenEle{
+        width: 100%;
+        height: 3rem;
+        display: none;
+        justify-content: space-evenly;
+        align-items: center;
+        position: absolute;
+        bottom: 0%;
     }
     .LinesOfBTNHidden {
         width: 5px;
@@ -505,19 +545,27 @@ footer {
         height: 10rem;
     }
     #YoutubeMainVid {
-        width: 10rem;
-        margin: 0%;
-        height: 5.8rem;
+        height: 7.5rem;
+        width: 13rem;
+        position: absolute;
+        left: 0.5rem;
     }
     #iFrameForLatestVideo {
         width: 10rem;
+        width: 13rem;
+        margin: 1rem 0.5rem;
     }
     #TiteOfLatestVideo {
-        width: 20rem;
+        width: 9rem;
         font-size: 0.7rem;
+        position: absolute;
+        right: 0rem;
+        margin: 2rem 0.5rem;
+        
     }
     #SubscribeBTN {
         bottom: -3rem;
+        font-size: 1rem;
     }
     #DownloadSec {
         width: 26rem;
