--- a/TechnicalTechX/Style/style.css
+++ b/TechnicalTechX/Style/style.css
@@ -24,6 +24,72 @@ body {
     background-color: #111;
 }
 
+#HiddenEle {
+    display: none;
+}
+
+#SlideSide {
+    width: 11rem;
+    min-height: 100vh;
+    max-height: 100vh;
+    display: grid;
+    background-color: #222;
+    position: absolute;
+    left: -15rem;
+    top: 0%;
+    z-index: 12;
+    transition: 0.5rem;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-template-rows: 3rem 3rem 3rem 3rem 3rem 3rem 3rem 3rem;
+    grid-gap: 0.5rem;
+    padding-top: 5rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
+.Come1 {
+    animation: AnimateCome1 0.3s linear both 1;
+}
+
+@keyframes AnimateCome1 {
+    from {
+        left: -15rem;
+    }
+    to {
+        left: 0%;
+    }
+}
+
+.Gone1 {
+    animation: AnimateGone1 0.3s linear both 1;
+}
+
+@keyframes AnimateGone1 {
+    from {
+        left: 0%;
+    }
+    to {
+        left: -15rem;
+    }
+}
+
+.SideBoxes2 {
+    background-color: rgb(43, 43, 43);
+    width: 11rem;
+    height: 3rem;
+    position: relative;
+    font: caption;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-variant: small-caps;
+}
+
 nav {
     width: 100%;
     height: 5rem;
@@ -47,6 +113,7 @@ nav {
     z-index: 12;
     transition: 0.5s;
     overflow: hidden;
+    z-index: 9;
 }
 
 #IMGProfile {
@@ -115,6 +182,7 @@ nav {
     align-items: center;
     flex-direction: column;
     cursor: pointer;
+    z-index: 15;
 }
 
 .Lines {
@@ -334,7 +402,6 @@ nav {
     padding-left: 0.5rem;
 }
 
-
 footer {
     background-color: #222;
     width: 100%;
@@ -483,6 +550,18 @@ footer {
     .QuickBTNs {
         display: none;
     }
+    #SlideSide {
+        width: 7rem;
+        grid-template-columns: 8rem;
+        padding-top: 4rem;
+        grid-gap: 0.2rem;
+        grid-template-rows: 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem;
+    }
+    .SideBoxes2 {
+        width: 100%;
+        height: 1.3rem;
+        font-size: 1rem;
+    }
     #Home2::after {
         position: absolute;
         bottom: 0;
@@ -516,11 +595,10 @@ footer {
         position: relative;
         transition: 0.5s;
     }
-    
     .QuickBTNs2:hover {
         background-color: rgba(255, 0, 0, 0.219);
     }
-    #HiddenEle{
+    #HiddenEle {
         width: 100%;
         height: 3rem;
         display: none;
@@ -561,7 +639,6 @@ footer {
         position: absolute;
         right: 0rem;
         margin: 2rem 0.5rem;
-        
     }
     #SubscribeBTN {
         bottom: -3rem;
