--- a/TechnicalTechX/Style/style.css
+++ b/TechnicalTechX/Style/style.css
@@ -1,5 +1,5 @@
 /* Changing Scroll Bar Style  */
-
+ 
 ::-webkit-scrollbar {
     background-color: rgba(255, 0, 0, 0);
     width: 0.5rem;
@@ -29,67 +29,94 @@ body {
 }
 
 #SlideSide {
-    width: 11rem;
-    min-height: 100vh;
-    max-height: 100vh;
-    display: grid;
-    background-color: #222;
-    position: absolute;
-    left: -15rem;
-    top: 0%;
+    width: 60%;
+    height: 60%;
+    display: flex;
+    background-color: rgb(17, 17, 17);
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    /* border: 2px solid rgb(158, 157, 157); */
+    position: fixed;
+    bottom: 45rem;
     z-index: 12;
     transition: 0.5rem;
     justify-content: space-evenly;
     align-items: center;
-    grid-template-rows: 3rem 3rem 3rem 3rem 3rem 3rem 3rem 3rem;
+    flex-direction: column;
     grid-gap: 0.5rem;
-    padding-top: 5rem;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
+    padding-top: 3rem;
+
 }
 
+#Linetop{
+    content: "";
+    position:absolute;
+    width: 7rem;
+    height: 0.2rem;
+    margin-top: 0.3rem;
+    border-radius: 0.5rem;
+    background-color: rgb(112, 112, 112);
+    top: 0;
+}
 .Come1 {
-    animation: AnimateCome1 0.3s linear both 1;
+    animation: AnimateCome1 0.3s ease-in-out both 1;
 }
 
 @keyframes AnimateCome1 {
     from {
-        left: -15rem;
+        bottom: -45rem;
     }
     to {
-        left: 0%;
+        bottom: 0%;
     }
 }
 
 .Gone1 {
-    animation: AnimateGone1 0.3s linear both 1;
+    animation: AnimateGone1 0.3s ease-in-out both 1;
 }
 
 @keyframes AnimateGone1 {
     from {
-        left: 0%;
+        bottom: 0%;
     }
     to {
-        left: -15rem;
+        bottom: -45rem;
     }
 }
 
 .SideBoxes2 {
-    background-color: rgb(43, 43, 43);
-    width: 11rem;
-    height: 3rem;
+    background-color: rgb(36, 36, 36);
+    width: 70%;
+    border-radius: 2rem;
+    height: 2rem;
     position: relative;
     font: caption;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     color: #999;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    padding-left: 1rem;
     align-items: center;
     font-variant: small-caps;
+    cursor: pointer;
+    transition: 0.5s;
 }
-
+.invert{
+    filter: invert();
+    
+}
+#SideImage4{
+    height: 1.25rem;
+}
+.SidePanelImages{
+    width: 1.7rem;
+    height: 1.7rem;
+    margin: auto 0.5rem;
+}
+.SideBoxes2:hover{
+    background-color: rgb(34, 34, 34);
+}
 nav {
     width: 100%;
     height: 5rem;
@@ -444,6 +471,23 @@ footer {
     color: rgb(221, 221, 221);
 }
 
+#Hovering{
+    width: 4rem;
+    height: 2rem;
+    background-color: white;
+    border-radius: 0.2rem;
+    border: 2px solid red;
+    position: fixed;
+    top: 0;
+}
+
+
+
+
+
+
+
+/* Media  */
 @media screen and (max-width: 720px) {
     #BTNOfNavSide {
         width: 1.7rem;
@@ -550,17 +594,42 @@ footer {
     .QuickBTNs {
         display: none;
     }
+    .SidePanelImages{
+        width: 0.7rem;
+        height: 0.7rem;
+    }
+    #SideImage4{
+        height: 0.55rem;
+    }
+    nav{
+        height: 2rem;
+        /* background-color: red; */
+        position: relative;
+        top: 0.5rem;
+    }
     #SlideSide {
-        width: 7rem;
+        width: 60%;
+        padding-top: 1.5rem;
         grid-template-columns: 8rem;
-        padding-top: 4rem;
         grid-gap: 0.2rem;
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+        padding-bottom: 0.3rem;
+        border: 1px solid rgb(0, 0, 0);
+        border-bottom: none;
+        padding-left: 0;
         grid-template-rows: 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem 1.5rem;
     }
+    #Slide{
+        top: 0;
+    }
+    #Linetop{
+        width: 5rem;
+    }
     .SideBoxes2 {
-        width: 100%;
-        height: 1.3rem;
-        font-size: 1rem;
+        width: 70%;
+        height: 1rem;
+        font-size: 0.6rem;
     }
     #Home2::after {
         position: absolute;
@@ -621,6 +690,7 @@ footer {
         border-radius: 0.5rem;
         overflow: hidden;
         height: 10rem;
+        top: 1rem;
     }
     #YoutubeMainVid {
         height: 7.5rem;
