--- a/Blogger/Style/style.css
+++ b/Blogger/Style/style.css
@@ -18,7 +18,7 @@ body {
     content: "";
     width: 100%;
     height: 100vh;
-    background-image: url(/Files/back.jpg);
+    background-image: url(../Files/back.jpg);
     background-size: cover;
     background-position: center;
     opacity: 0.3;
@@ -50,7 +50,7 @@ nav {
     justify-content: center;
     align-items: center;
     position: relative;
-    background-image: url(/Files/RoyalDesigner.png);
+    background-image: url(../Files/RoyalDesigner.png);
     background-position: center;
     background-size: cover;
 }
