--- a/Blogger/Style/style.css
+++ b/Blogger/Style/style.css
@@ -229,7 +229,7 @@ nav {
 
 #Front1{
     width: 100%;
-    height: 80vh;
+    height: 35rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -282,5 +282,8 @@ nav {
     }
     #AboutMobileImg{
         font-size: 1rem;
+    }
+    #Front1{
+        height: 30rem;
     }
 }
