--- a/Blogger/Style/style.css
+++ b/Blogger/Style/style.css
@@ -216,11 +216,10 @@ nav {
 
 #content{
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     width:90%;
     height: auto;
-    margin: 2rem auto;
+    margin-top: 6rem;
     z-index: 9;
     opacity: 1;
     position: relative;
@@ -259,8 +258,13 @@ nav {
 }
 
 #Front2{
-    height: 100vh;
     width: 100%;
+    height: 35rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin: 4rem 0;
 }
 
 
@@ -275,8 +279,6 @@ nav {
     #AboutMobileImg{
         font-size: 1.3rem;
     }
-}
-@media screen and (max-width: 690px) {
     #MobileImages{
         width: 12rem;
     }
