--- a/Blogger/Style/style.css
+++ b/Blogger/Style/style.css
@@ -219,7 +219,7 @@ nav {
     align-items: center;
     width:90%;
     height: auto;
-    margin-top: 6rem;
+    margin: 2rem auto;
     z-index: 9;
     opacity: 1;
     position: relative;
@@ -286,6 +286,9 @@ nav {
         font-size: 1rem;
     }
     #Front1{
+        height: 30rem;
+    }
+    #Front2{
         height: 30rem;
     }
 }
