--- a/Blogger/Style/style.css
+++ b/Blogger/Style/style.css
@@ -226,9 +226,46 @@ nav {
     flex-direction: column;
 }
 
-#Front1{
+#WelcomePage{
     width: 100%;
     height: 35rem;
+    display: flex;
+    position: relative;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+}
+
+#WelcomeProfile{
+    width: 8rem;
+    margin-top: 5rem;
+}
+
+#WelcomeName{
+    font: caption;
+    font-size: 3rem;
+    color: white;
+    margin-top: 2rem;
+    font-weight: 500;
+    font-family: monospace;
+}
+
+#BioTxt{
+    color: whitesmoke;
+    font: caption;
+    font-size: 1.05rem;
+    width: 80%;
+    margin-top: 1rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+}
+
+#Front1{
+    width: 100%;
+    height: 38rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -293,5 +330,8 @@ nav {
         /* background-color: red; */
         height: 25rem;
         margin: 0;
+    }
+    #WelcomeName{
+        font-size: 2rem;
     }
 }
