--- a/Blogger/Style/style.css
+++ b/Blogger/Style/style.css
@@ -388,6 +388,9 @@ nav {
     #AboutMobileImg{
         font-size: 1rem;
     }
+    #AboutWeb1{
+        font-size: 1rem;
+    }
     #Front1{
         height: 25rem;
         /* background-color: red; */
